- change margins, colors and word align - fix smaller bugs in spelling - add favicon

--- a/assets/css/animate.css
+++ b/assets/css/animate.css
@@ -2810,7 +2810,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 .collapsible {
     margin-top: 1rem;
-    color:  rgba(253,115,90,1);
+    color: #c8687cff;
     background-color: #f5f5f5;
     cursor: pointer;
     width: 100%;
@@ -2820,12 +2820,12 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 }
 
 .collapsible-active, .collapsible:hover {
-    background-color: rgba(253,115,90,1);
+    background-color: #c8687cff;
     color: white;
 }
 
 .collapsible-content {
-    padding: 0 18px;
+    padding: 0 0px;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.2s ease-out;
